<?xml version="1.0" encoding="utf-8"?>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center"
	android:layout_gravity="center"
>


	<TextView
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/title"
                android:text="@string/tadd"
                android:textColor="#000000"
                android:textSize="22dp"
		android:padding="1dp"
        />

	<LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/blayoutmain"
                android:background="@android:color/transparent"
        >

	<TextView
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/importtext"
                android:textColor="#000000"
                android:textSize="18dp"
                android:padding="8dp"
		android:text="@string/importresults"
        />

	<TextView
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/text"
                android:textColor="#000000"
                android:textSize="16dp"
                android:padding="4dp"
        />
	 <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/fwrapper"
                android:background="@android:color/transparent"
        >
		<ImageButton 
			android:layout_width="24dp"
			android:layout_height="24dp"
                        android:id="@+id/changebutton"
			android:clickable="true"
                />

		
		<TextView
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/changefolder"
                android:textColor="#000000"
                android:textSize="12dp"
		android:text="@string/changefolder"
                android:padding="4dp"
		/>
	</LinearLayout>

	<TextView
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/dots"
                android:textColor="#000000"
                android:textSize="16dp"
                android:padding="4dp"
        />
	<LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/bwrapper"
                android:background="@android:color/transparent"
        >

	<Button
		android:layout_width="128dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:text="@string/ok"
                android:id="@+id/button"
	/>
	<Button
		android:layout_width="128dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:text="@string/email"
                android:id="@+id/emailbutton"
	/>

	</LinearLayout>

	</LinearLayout>






















</LinearLayout>


