<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="0dp"
        >



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="top"
	android:layout_gravity="center"
>
<!--
	<LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:padding="20dp"
                android:layout_gravity="right"
                android:gravity="right"
                android:id="@+id/blayouttop"
                android:background="@android:color/transparent"
        >
                <ImageButton 
                        android:id="@+id/iemail"
			android:clickable="true"
			android:gravity="right"
			android:layout_gravity="bottom"
			android:layout_width="32dp"
			android:layout_height="32dp"
                />
	</LinearLayout>
-->






	<LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:padding="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/blayouttitle"
                android:background="@android:color/transparent"
        >
	<TextView
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/title"
                android:text="@string/app_name0"
                android:textColor="#000000"
                android:textSize="26dp"
        />
	<TextView
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/title1"
                android:text="@string/app_name1"
                android:textColor="#000000"
                android:textSize="20dp"
        />
        <TextView
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/title2"
                android:text="@string/app_name"
                android:textColor="#000000"
                android:textSize="26dp"
        />

	</LinearLayout>



 <LinearLayout
                android:orientation="vertical"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/blayoutwr"
                android:background="@android:color/transparent"
        >




	<LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/blayouttop"
                android:background="@android:color/transparent"
		android:layout_weight="0"
        >
		<ImageButton 
			android:layout_gravity="center"
			android:gravity="center"	
			android:id="@+id/iadd"
			android:layout_marginTop="40dp"
			android:layout_height="64dp"
			android:layout_width="64dp"
		/>


	<TextView
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/tadd"
                android:text="@string/tadd"
                android:textColor="#000000"
                android:textSize="16dp"
        />
        </LinearLayout>


	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_marginTop="10dp"
		android:layout_gravity="center"
		android:gravity="center"	
		android:orientation="vertical"
		android:layout_weight="0"
	>
		<ImageButton 
			android:layout_gravity="center"
			android:gravity="center"	
			android:id="@+id/ibank"
			android:layout_marginTop="40dp"
			android:layout_height="64dp"
			android:layout_width="64dp"
		/>
	<TextView
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/tbank"
                android:text="@string/tbank"
                android:textColor="#000000"
                android:textSize="16dp"
        />

	</LinearLayout>




	<LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:gravity="center"        
                android:orientation="vertical"
		android:layout_weight="0"
        >
                <ImageButton 
                        android:layout_gravity="center"
                        android:gravity="center"        
                        android:id="@+id/ispend"
                        android:layout_marginTop="40dp"
                        android:layout_height="64dp"
                        android:layout_width="64dp"
                />
        <TextView
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/tspend"
                android:text="@string/tspend"
                android:textColor="#000000"
                android:textSize="16dp"
        />

        </LinearLayout>












</LinearLayout>



</LinearLayout>
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
	android:layout_marginTop="0dp"
	android:padding="2dp"
	android:layout_gravity="bottom"
        android:gravity="center|bottom">

	<TextView
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center|bottom"
		android:layout_marginTop="0dp"
		android:padding="4dp"
                android:layout_gravity="bottom"
                android:id="@+id/tspend"
                android:text="@string/url"
                android:textColor="#000000"
                android:textSize="16dp"
        />
</LinearLayout>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="0dp"
        android:padding="2dp"
        android:layout_gravity="bottom"
        android:gravity="right|bottom">

	<TextView
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="right"
                android:layout_marginTop="0dp"
                android:padding="4dp"
                android:layout_gravity="bottom"
                android:id="@+id/tversion"
                android:textColor="#000000"
                android:textSize="10dp"
        />


</LinearLayout>








</FrameLayout>
